--- a/todo.html
+++ b/todo.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Simple To-Do List</title>
+  <title>Simple To-Do Page</title>
 </head>
 <body>
-  <h2>My To-Do List</h2>
-  <ul>
-    <li>Learn Git</li>
-    <li>Practice Linux commands</li>
-    <li>Push project to GitHub</li>
-  </ul>
+  <h2>To-Do Item</h2>
+
+  <p>Item Name: Buy Groceries</p>
+  <p>Item Description: Buy milk, eggs, and bread</p>
+
 </body>
 </html>
+
